# voronoi_glfw

./: CMakeLists.txt
include/: displayer.h  event.h  fortune_algorithm.h  point_producer.h  voronoi_diagram.h
src/: displayer.cpp  event.cpp  fortune_algorithm.cpp  main.cpp  point_producer.cpp  voronoi_diagram.cpp
